<resources>
    <string name="app_name">Travel Bug</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_geolocate">Pick Place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="search">Search for Country/City</string>


    <string name="email">E-mail</string>
    <string name="lastName">Last Name</string>
    <string name="firstName">First Name</string>
    <string name="userName">Username</string>
    <string name="signUp">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="createAccount">Create Account</string>
    <string name="noUserFound">No User Found</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="status">Status:</string>
    <string name="deleteTask">Delete Task</string>
    <string name="plannerName">Planner Name</string>

</resources>